fixed the overflow problem om how to play section on mobile devices

--- a/src/App.css
+++ b/src/App.css
@@ -369,7 +369,9 @@ body {
   display: flex;
   flex-direction: column;
   align-items: start;
-  justify-content: space-betweens;
+  justify-content: space-between;
+  overflow-y: auto;
+  min-height: 600px;
 }
 
 .rules_container {
